horizontal scroll error fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@
 .bodyClone {
   background: hsl(44, 100%, 95%);
   position: relative;
-  width: 100vw;
+  width: calc(100vw - 5px);
   overflow-x: hidden;
   color: hsl(0, 0%, 35%);
 
